Bug 122305 - Form-Wizard: No wordwrap in Group Element and Combo Box Wizard for forms.
Summary: Form-Wizard: No wordwrap in Group Element and Combo Box Wizard for forms.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.1.4.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.3.0 target:6.2.2
Keywords: bibisectRequest, regression
Depends on:
Blocks: Database-Wizard
  Show dependency treegraph
 
Reported: 2018-12-24 14:40 UTC by Robert Großkopf
Modified: 2019-02-18 01:11 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Different behavior of form wizards (wordwrap, resizable?) (92.01 KB, application/pdf)
2018-12-24 14:40 UTC, Robert Großkopf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2018-12-24 14:40:01 UTC
Created attachment 147801 [details]
Different behavior of form wizards (wordwrap, resizable?)

Open the attached *.pdf-file.
Shows one page of the Group Element Wizard and one page of the Combo Box Wizard.

Text in both wizards will be cut by setting ... at the end of the row. Screenshots are made with LO 6.1.4.2 on OpenSUSE 15, 64bit rpm Linux.

This behaviour doesn't exist in LO 5.1.5.2. Screenshots could be seen also in the attached *.pdf-file.
Comment 1 Roman Kuznetsov 2018-12-24 17:33:08 UTC
please add info from dialogue Help->About

it looks as KDE and/or SuSe problem
Comment 2 Robert Großkopf 2018-12-24 22:36:56 UTC
(In reply to Roman Kuznetsov from comment #1)
> please add info from dialogue Help->About
> 
> it looks as KDE and/or SuSe problem

Version: 6.1.4.2
Build ID: 9d0f32d1f0b509096fd65e0d4bec26ddd1938fd3
CPU threads: 6; OS: Linux 4.12; UI render: default; VCL: gtk2; 
Locale: de-DE (de_DE.UTF-8); Calc: group threaded

Appears in KDE Plasma and xfce/gtk2/Clearlooks
Comment 3 Robert Großkopf 2019-01-06 15:55:12 UTC
Have tested this again with LO 6.2.0.1:
Version: 6.2.0.1
Build ID: 0412ee99e862f384c1106d0841a950c4cfaa9df1
CPU threads: 6; OS: Linux 4.12; UI render: default; VCL: gtk3; 
Locale: de-DE (de_DE.UTF-8); UI-Language: en-US
Calc: threaded

Same behaviour with gtk3, but when I change UI-language to de-DE the wordwrap will be done.
Comment 4 Caolán McNamara 2019-02-17 16:38:52 UTC
https://gerrit.libreoffice.org/#/c/67942/ makes this work

german probably works because the length is *so* long it triggers the line wrap while in other languages the wriggle room is enough that it doesn't wrap. Using the actual width of the wizard as the width to measure against (as opposed to 82 chars) should ensure the right thing happens
Comment 5 Commit Notification 2019-02-17 21:18:39 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/3bb5e0c6dc5f069b8af39cdb669913e286a294fd%5E%21

tdf#122305 tdf#122307 wrap label based on current wizard width

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2019-02-17 21:19:34 UTC
fixed in master, backport to 6-2 in gerrit
Comment 7 Commit Notification 2019-02-18 01:11:31 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/a2e9836a7591e5c018cdb7f6d9e35db3a5853d54%5E%21

tdf#122305 tdf#122307 wrap label based on current wizard width

It will be available in 6.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.