tdf#122305 tdf#122307 wrap label based on current wizard width

rather than wrap on 82 characters, which is still too large for
the width we are given

Change-Id: I8bbb2d06d974f78d442cf59faebd29a8e22d7750
Reviewed-on: https://gerrit.libreoffice.org/67943
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>